1.4 compatibility
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@10632 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f